HT-95: Fixed building and campus image width. Added spacing between campus image and buildings list.

--- a/drupal/web/themes/custom/uh_space/src/custom/components/entity/_building.scss
+++ b/drupal/web/themes/custom/uh_space/src/custom/components/entity/_building.scss
@@ -1,5 +1,5 @@
 .taxonomy-term--type-building {
-  .field-name-field-images {
+  .field--name-field-images {
     img {
       width: 100%;
     }
